the big refactor

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
   "singleQuote": true,
   "quoteProps": "consistent",
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "printWidth": 80
 }
