--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@keyv/postgres": "^1.0.16",
+    "date-fns": "^2.20.0",
     "discord.js": "vaporox/discord.js#feat-interactions",
     "keyv": "^4.0.3",
     "node-cron": "^3.0.0",
