--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "build": "tsc",
     "start": "NODE_ENV=production NODE_PATH=./dist node ./dist/main.js",
     "watch": "NODE_ENV=development NODE_PATH=./src nodemon",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "migrate": "prisma db push --preview-feature"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
@@ -18,15 +19,15 @@
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
+    "prisma": "^2.20.1",
     "ts-jest": "^26.5.3",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "@keyv/postgres": "^1.0.16",
+    "@prisma/client": "^2.20.1",
     "date-fns": "^2.20.0",
     "discord.js": "vaporox/discord.js#feat-interactions",
-    "keyv": "^4.0.3",
     "mathjs": "^9.3.0",
     "node-cron": "^3.0.0",
     "object.fromentries": "^2.0.4",
