--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "typeRoots": ["./types", "./node_modules/@types"]
   },
   "include": ["src/**/*", "src/**/*.json"]
 }
