--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@types/mathjs": "^6.0.11",
     "@types/node": "^14.14.33",
     "@types/object.fromentries": "^2.0.0",
-    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "eslint": "^7.21.0",
@@ -26,6 +25,7 @@
   },
   "dependencies": {
     "@prisma/client": "^2.20.1",
+    "@types/node-cron": "^2.0.3",
     "date-fns": "^2.20.0",
     "discord.js": "vaporox/discord.js#feat-interactions",
     "mathjs": "^9.3.0",
