--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@prisma/client": "^2.20.1",
     "@types/node-cron": "^2.0.3",
     "date-fns": "^2.20.0",
-    "discord.js": "vaporox/discord.js#feat-interactions",
+    "discord.js": "vaporox/discord.js#d19d70f",
     "mathjs": "^9.3.0",
     "node-cron": "^3.0.0",
     "object.fromentries": "^2.0.4",
