--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/mathjs": "^6.0.11",
     "@types/node": "^14.14.33",
     "@types/object.fromentries": "^2.0.0",
+    "@types/seedrandom": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "eslint": "^7.21.0",
@@ -31,6 +32,7 @@
     "mathjs": "^9.3.0",
     "node-cron": "^3.0.0",
     "object.fromentries": "^2.0.4",
+    "seedrandom": "^3.0.5",
     "winston": "^3.3.3"
   }
 }
