--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "@types/keyv": "^3.1.1",
+    "@types/lodash.get": "^4.4.6",
+    "@types/lodash.has": "^4.5.6",
+    "@types/lodash.set": "^4.3.6",
     "@types/mathjs": "^6.0.11",
     "@types/node": "^14.14.33",
     "@types/object.fromentries": "^2.0.0",
@@ -29,6 +32,9 @@
     "@types/node-cron": "^2.0.3",
     "date-fns": "^2.20.0",
     "discord.js": "vaporox/discord.js#d19d70f",
+    "lodash.get": "^4.4.2",
+    "lodash.has": "^4.5.2",
+    "lodash.set": "^4.3.2",
     "mathjs": "^9.3.0",
     "node-cron": "^3.0.0",
     "object.fromentries": "^2.0.4",
