--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node-cron": "^2.0.3",
     "date-fns": "^2.20.0",
     "discord.js": "vaporox/discord.js#69dfce3",
+    "imgur": "^2.0.0-next.6",
     "lodash.get": "^4.4.2",
     "lodash.has": "^4.5.2",
     "lodash.set": "^4.3.2",
