--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@prisma/client": "^2.20.1",
     "@types/node-cron": "^2.0.3",
+    "canvas": "^2.7.0",
     "date-fns": "^2.20.0",
     "discord.js": "vaporox/discord.js#69dfce3",
     "imgur": "^2.0.0-next.6",
