--- a/src/porygon/settings/settings.json
+++ b/src/porygon/settings/settings.json
@@ -237,6 +237,16 @@
           "zodiac",
           "zombie"
         ]
+      },
+      "joins": {
+        "duck_role": {
+          "prod": "754835519359418448",
+          "dev": "817479194279542794"
+        },
+        "channel": {
+          "prod": "380164124774236171",
+          "dev": "746219046374080535"
+        }
       }
     },
     "global": {
