lib_pokecom event handlers

--- a/src/porygon/settings/settings.json
+++ b/src/porygon/settings/settings.json
@@ -289,6 +289,16 @@
             "239067868174483456": 2
           }
         }
+      },
+      "logging": {
+        "log_channel": {
+          "prod": "423905036859604993",
+          "dev": "775630195578503189"
+        },
+        "warning_channel": {
+          "prod": "613756774234718209",
+          "dev": "775630201060720640"
+        }
       }
     }
   },
