--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@types/node-cron": "^2.0.3",
     "canvas": "^2.7.0",
     "date-fns": "^2.20.0",
-    "discord.js": "vaporox/discord.js#69dfce3",
+    "discord.js": "discordjs/discord.js#master",
     "imgur": "^2.0.0-next.6",
     "lodash.get": "^4.4.2",
     "lodash.has": "^4.5.2",
