--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
   "editor.formatOnSave": true,
   "files.exclude": {
-    "**/dist": true
+    "dist": true
   },
   "search.exclude": {
-    "**/dist": true
+    "dist": true
   }
 }
