--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^14.14.33",
     "@types/object.fromentries": "^2.0.0",
     "@types/seedrandom": "^3.0.0",
+    "@types/string-similarity": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "eslint": "^7.21.0",
@@ -29,7 +30,6 @@
   },
   "dependencies": {
     "@prisma/client": "^2.20.1",
-    "@tipsypastels/pokemon": "^0.0.3",
     "@types/node-cron": "^2.0.3",
     "canvas": "^2.7.0",
     "date-fns": "^2.20.0",
@@ -41,7 +41,9 @@
     "mathjs": "^9.3.0",
     "node-cron": "^3.0.0",
     "object.fromentries": "^2.0.4",
+    "promise.any": "^2.0.2",
     "seedrandom": "^3.0.5",
+    "string-similarity": "^4.0.4",
     "winston": "^3.3.3"
   }
 }
