--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,10 @@
   "rules": {
     "@typescript-eslint/no-namespace": "off",
     "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      { "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }
+    ],
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
     "indent": ["error", 2, { "SwitchCase": 1 }],
