--- a/src/porygon/settings/settings.json
+++ b/src/porygon/settings/settings.json
@@ -88,6 +88,37 @@
           "dev": "775630182521634846",
           "prod": "830569145204342794"
         }
+      },
+      "vibecheck": {
+        "negative_traits": [
+          "a cursed user",
+          "from texas",
+          "from england",
+          "from australia",
+          "into feet",
+          "too gay to function",
+          "addicted to pleads",
+          "a nerd",
+          "a clown",
+          "an owen",
+          "a member of gumbo gang",
+          "high on potenuse",
+          "has tried the expanded free trial of our critically acclaimed MMORPG #FFXIV? you can play through the entirety of a realm reborn and the award-winning heavensward expansion up to level 60 for FREE with no restrictions on playtime!"
+        ],
+        "positive_traits": [
+          "the big gay",
+          "a slut for /headpat",
+          "using /vibecheck",
+          "shoved in a locker",
+          "illegally cute",
+          "too cute for #burd-selfies",
+          "observing Inky Appreciation Hour",
+          "a Dakota stan",
+          "an Angie stan",
+          "an Inky stan",
+          "a Haley stan",
+          "a Mag stan"
+        ]
       }
     },
     "games": {
