added more lines

--- a/src/porygon/settings/settings.json
+++ b/src/porygon/settings/settings.json
@@ -100,24 +100,33 @@
           "addicted to pleads",
           "a nerd",
           "a clown",
+          "a weeb",
+          "a boomer",
           "an owen",
+          "an SAO stan",
+          "a PC boomer",
           "a member of gumbo gang",
           "high on potenuse",
-          "has tried the expanded free trial of our critically acclaimed MMORPG #FFXIV? you can play through the entirety of a realm reborn and the award-winning heavensward expansion up to level 60 for FREE with no restrictions on playtime!"
+          "quite conservative",
+          "a player of the expanded free trial of our critically acclaimed MMORPG #FFXIV? you can play through the entirety of a realm reborn and the award-winning heavensward expansion up to level 60 for FREE with no restrictions on playtime"
         ],
         "positive_traits": [
           "the big gay",
           "a slut for /headpat",
-          "using /vibecheck",
+          "a /vibecheck user",
           "shoved in a locker",
           "illegally cute",
           "too cute for #burd-selfies",
-          "observing Inky Appreciation Hour",
+          "an observer of Inky Appreciation Hour",
+          "in the Warrior Cats Club",
+          "numberous bees",
           "a Dakota stan",
           "an Angie stan",
           "an Inky stan",
           "a Haley stan",
-          "a Mag stan"
+          "a Chura stan",
+          "a Mag stan",
+          "a Mylah stan"
         ]
       }
     },
