new vibes just dropped

--- a/src/porygon/settings/settings.json
+++ b/src/porygon/settings/settings.json
@@ -104,29 +104,38 @@
           "a boomer",
           "an owen",
           "an SAO stan",
+          "a Mineta stan",
           "a PC boomer",
+          "uncomf",
           "a member of gumbo gang",
           "high on potenuse",
+          "mewthree w/ armor",
           "quite conservative",
+          "on their ninth day without sleep",
           "a player of the expanded free trial of our critically acclaimed MMORPG #FFXIV? you can play through the entirety of a realm reborn and the award-winning heavensward expansion up to level 60 for FREE with no restrictions on playtime"
         ],
         "positive_traits": [
-          "the big gay",
-          "a slut for /headpat",
-          "a /vibecheck user",
-          "shoved in a locker",
-          "illegally cute",
-          "too cute for #burd-selfies",
-          "an observer of Inky Appreciation Hour",
-          "in the Warrior Cats Club",
-          "numberous bees",
-          "a Dakota stan",
-          "an Angie stan",
-          "an Inky stan",
-          "a Haley stan",
-          "a Chura stan",
-          "a Mag stan",
-          "a Mylah stan"
+          "being the big gay",
+          "being a slut for /headpat",
+          "using /vibecheck",
+          "getting shoved in a locker",
+          "being illegally cute",
+          "being too cute for #burd-selfies",
+          "observing Inky Appreciation Hour",
+          "joining the Warrior Cats Club",
+          "being numberous bees",
+          "vaping florida to create a hurricane",
+          "being the world's biggest yorkshire pudding",
+          "being comf",
+          "being Doctor Lala's assistant",
+          "being a Bakushima shipper",
+          "stanning Dakota",
+          "stanning Angie",
+          "stanning Inky",
+          "stanning Haley",
+          "stanning Chura",
+          "stanning Mag",
+          "stanning Mylah"
         ]
       }
     },
