--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prisma": "^2.20.1",
     "ts-jest": "^26.5.3",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "typescript": "4.3.5"
   },
   "dependencies": {
     "@prisma/client": "^2.20.1",
