pc: shim legacy commands

--- a/src/porygon/settings/settings.json
+++ b/src/porygon/settings/settings.json
@@ -400,7 +400,8 @@
           "prod": "613756774234718209",
           "dev": "775630201060720640"
         }
-      }
+      },
+      "shim_legacy_commands": true
     }
   },
   "pory": {
