--- a/src/porygon/settings/settings.json
+++ b/src/porygon/settings/settings.json
@@ -123,7 +123,7 @@
           "being too cute for #burd-selfies",
           "observing Inky Appreciation Hour",
           "joining the Warrior Cats Club",
-          "being numberous bees",
+          "being numerous bees",
           "vaping florida to create a hurricane",
           "being the world's biggest yorkshire pudding",
           "being comf",
