--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "scripts": {
+    "test": "jest",
     "build": "tsc",
     "start": "NODE_ENV=production NODE_PATH=./dist node ./dist/main.js",
     "watch": "NODE_ENV=development NODE_PATH=./src nodemon",
-    "test": "jest --coverage",
     "migrate": "prisma db push --preview-feature"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.20",
+    "@types/jest": "^26.0.24",
     "@types/keyv": "^3.1.1",
     "@types/lodash.get": "^4.4.6",
     "@types/lodash.has": "^4.5.6",
@@ -20,11 +20,11 @@
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "eslint": "^7.21.0",
-    "jest": "^26.6.3",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.2",
     "prisma": "^2.20.1",
-    "ts-jest": "^26.5.3",
+    "ts-jest": "^27.0.3",
     "ts-node": "^9.1.1",
     "typescript": "4.3.5"
   },
