--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "console-table-printer": "^2.10.0",
     "date-fns": "^2.27.0",
     "discord.js": "^13.4.0",
+    "dotenv": "^10.0.0",
     "jest": "^27.4.5",
     "mathjs": "^10.0.1",
     "node-cron": "^3.0.0",
