--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "dependencies": {
     "@prisma/client": "3.7.0",
     "colors": "^1.4.0",
+    "common-tags": "^1.8.2",
     "console-table-printer": "^2.10.0",
+    "cron-parser": "^4.2.1",
     "date-fns": "^2.27.0",
-    "discord.js": "^13.4.0",
+    "discord.js": "^13.5.0",
     "dotenv": "^10.0.0",
     "jest": "^27.4.5",
     "mathjs": "^10.0.1",
@@ -18,6 +20,7 @@
     "ts-jest": "^27.1.2"
   },
   "devDependencies": {
+    "@types/common-tags": "^1.8.1",
     "@types/jest": "^27.0.3",
     "@types/node-cron": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
