--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.27.0",
     "discord.js": "^13.5.0",
     "dotenv": "^10.0.0",
+    "immutable": "^4.0.0",
     "jest": "^27.4.5",
     "mathjs": "^10.0.1",
     "node-cron": "^3.0.0",
