add some vscode excludes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,14 @@
 {
   "editor.formatOnSave": true,
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "files.exclude": {
+    "**/.git": true,
+    "**/node_modules": true,
+    "dist": true,
+    "assets/pokemon_sprites": true
+  },
+  "search.exclude": {
+    "**/node_modules": true,
+    "dist": true
+  }
 }
