--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "codegen": "apollo client:codegen --target typescript --no-addTypename"
   },
   "dependencies": {
+    "@favware/zalgo": "^3.1.3",
     "@prisma/client": "3.7.0",
     "colors": "^1.4.0",
     "common-tags": "^1.8.2",
@@ -20,7 +21,6 @@
     "jest": "^27.4.5",
     "mathjs": "^10.0.1",
     "node-cron": "^3.0.0",
-    "node-fetch": "2.0.0",
     "stacktrace-parser": "^0.1.10",
     "ts-jest": "^27.1.2"
   },
@@ -30,7 +30,6 @@
     "@types/node-cron": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
-    "apollo": "^2.33.9",
     "eslint": "^8.4.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
