--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jest": "^27.4.5",
     "mathjs": "^10.0.1",
     "node-cron": "^3.0.0",
+    "sha1": "^1.1.1",
     "stacktrace-parser": "^0.1.10",
     "ts-jest": "^27.1.2"
   },
@@ -28,6 +29,7 @@
     "@types/common-tags": "^1.8.1",
     "@types/jest": "^27.0.3",
     "@types/node-cron": "^3.0.0",
+    "@types/sha1": "^1.1.3",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "eslint": "^8.4.1",
